--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -37,10 +37,16 @@
                 <textarea asp-for="@Model.Body" rows="10" class="form-control"></textarea>
                 <span asp-validation-for="@Model.Body" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="@Model.Description"></label>
-                <textarea asp-for="@Model.Description" rows="2" class="form-control"></textarea>
-                <span asp-validation-for="@Model.Description" class="text-danger"></span>
+            <div class="mb-3">
+                <div class="form-group">
+                    <label asp-for="@Model.Description"></label>
+                    <textarea asp-for="@Model.Description" rows="2" class="form-control"></textarea>
+                    <span asp-validation-for="@Model.Description" class="text-danger"></span>
+                </div>
+                    <div class="form-check text-right">
+                    <input asp-for="@Model.HasDescription" class="form-check-input">
+                    <label asp-for="@Model.HasDescription" class="form-check-label"></label>
+                </div>
             </div>
             <button type="reset" class="btn btn-danger">Reset</button>
             <button type="submit" class="btn btn-primary float-right">Generate</button>
