Add New Snippet button

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -49,6 +49,7 @@
                 </div>
             </div>
             <button type="reset" class="btn btn-danger">Reset</button>
+            <a href="/" class="btn btn-success">New Snippet</a>
             <button type="submit" class="btn btn-primary float-right">Generate</button>
         </form>
     </div>
