HasDescription checkbox now changes its state with Description textarea

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -58,3 +58,7 @@
         <textarea asp-for="@Model.Snippet" rows="20" class="form-control snippet-area"></textarea>
     </div>
 </div>
+
+@section Scripts {
+    <script src="~/script/hasDescription.js"></script>
+}
