Add similar behavior to ConvertToTabs checkbox

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -60,5 +60,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/script/hasDescription.js"></script>
+    <script src="~/script/form.js"></script>
 }
