Add url to snippet docs

--- a/src/VSCodeSnippetGenerator.Web/Pages/Shared/_Layout.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Visual Studio Code Snippet Generator</title>
 
     <link rel="stylesheet" href="~/lib/bootswatch/sketchy/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
