--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -30,6 +30,12 @@
                         <input asp-for="@Model.ConvertToTabs" class="form-check-input">
                         <label asp-for="@Model.ConvertToTabs" class="form-check-label"></label>
                     </div>
+                    <div class="mt-3 text-right">
+                        <i class="fas fa-question-circle text-primary mr-3"></i>
+                        <a href="https://code.visualstudio.com/docs/editor/userdefinedsnippets">
+                            Need some help?
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="form-group">
