Define target _blank for help link

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -32,7 +32,7 @@
                     </div>
                     <div class="mt-3 text-right">
                         <i class="fas fa-question-circle text-primary mr-3"></i>
-                        <a href="https://code.visualstudio.com/docs/editor/userdefinedsnippets">
+                        <a href="https://code.visualstudio.com/docs/editor/userdefinedsnippets" target="_blank">
                             Need some help?
                         </a>
                     </div>
