Add button for copying snippets to clipboard

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -59,9 +59,12 @@
             <button type="submit" class="btn btn-primary float-right">Generate</button>
         </form>
     </div>
-    <div class="col-12 col-lg-6">
-        <label asp-for="@Model.Snippet"></label>
-        <textarea asp-for="@Model.Snippet" rows="20" class="form-control snippet-area"></textarea>
+    <div class="col-12 col-lg-6 clearfix">
+        <div class="form-group">
+            <label asp-for="@Model.Snippet"></label>
+            <textarea asp-for="@Model.Snippet" rows="20" class="form-control snippet-area"></textarea>
+        </div>
+        <button id="CopyToClipboard" class="btn btn-primary float-right">Copy To Clipboard</button>
     </div>
 </div>
 
