--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -23,8 +23,14 @@
                 <div class="col-6">
                     <div class="form-group">
                         <label asp-for="@Model.TabLength"></label>
-                        <input asp-for="@Model.TabLength" min="2" max="8" class="form-control" />
+                        <input asp-for="@Model.TabLength" min="2" max="8" list="LengthPerLanguage" class="form-control" />
                         <span asp-validation-for="@Model.TabLength" class="text-danger"></span>
+                        <datalist id="LengthPerLanguage">
+                            @foreach (var i in Indentation.PerLanguage)
+                            {
+                                <option value="@i.tabLength" label="@i.language" />
+                            }
+                        </datalist>
                     </div>
                     <div class="form-check text-right">
                         <input asp-for="@Model.ConvertToTabs" class="form-check-input">
