--- a/src/VSCodeSnippetGenerator.Web/Pages/_ViewImports.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 @using VSCodeSnippetGenerator.Web
+@using VSCodeSnippetGenerator.Web.Constants
 @namespace VSCodeSnippetGenerator.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
