Separate tool name from the language in the Indentation list

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -28,7 +28,7 @@
                         <datalist id="LengthPerLanguage">
                             @foreach (var i in Indentation.PerLanguage)
                             {
-                                <option value="@i.tabLength" label="@i.language" />
+                                <option value="@i.tabLength" label="@i.language (@i.tool)" />
                             }
                         </datalist>
                     </div>
