Add unobtrusive validation plugin

--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -76,4 +76,7 @@
 
 @section Scripts {
     <script src="~/script/form.js"></script>
+    <script src="~/lib/jquery/jquery.min.js"></script>
+    <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
