--- a/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
+++ b/src/VSCodeSnippetGenerator.Web/Pages/Index.cshtml
@@ -23,7 +23,7 @@
                 <div class="col-6">
                     <div class="form-group">
                         <label asp-for="SnippetInput.TabLength"></label>
-                        <input asp-for="SnippetInput.TabLength" min="2" max="8" value="4" list="SpacesPerTab" class="form-control" />
+                        <input asp-for="SnippetInput.TabLength" min="2" max="8" list="SpacesPerTab" class="form-control" />
                         <span asp-validation-for="SnippetInput.TabLength" class="text-danger"></span>
                         <datalist id="SpacesPerTab">
                             <option value="2" />
